--- a/src/app/views/clientes/clientes.component.html
+++ b/src/app/views/clientes/clientes.component.html
@@ -6,10 +6,10 @@
     class="success-toast">
     <c-toast-header class="success-toast-header">
       <svg cIcon name="cilCheck" class="icon-success"></svg> <!-- Icono de éxito -->
-      <h4 class="success-heading">Creacion de Persona exitosa</h4>
+      <h5 class="success-heading">Creacion de Persona exitosa</h5>
     </c-toast-header>
     <c-toast-body class="success-toast-body">
-      <p class="success-toast-message">Persona creada con exito</p>
+      <p class="success-toast-message" >Persona creada con exito</p>
     </c-toast-body>
   </c-toast>
 </c-toaster>
@@ -21,7 +21,7 @@
     class="danger-toast">
     <c-toast-header class="danger-toast-header">
       <svg cIcon name="cilReportSlash" class="icon-danger"></svg> <!-- Icono de error -->
-      <h4 class="error-heading">   Error al crear persona</h4>
+      <h5 class="error-heading">   Error al crear persona</h5>
     </c-toast-header>
     <c-toast-body class="danger-toast-body">
       <p class="danger-toast-message">Error al ingresar los datos</p>
@@ -91,6 +91,10 @@
       </form>
     </div>
     <div *ngIf="!mostrarFormularioIngreso &&!mostrarFormularioEditar">
+      <div class="search-container">
+        <input type="text" placeholder="Buscar..." [(ngModel)]="searchText" class="form-control search-input" />
+        <svg class="search-icon" cIcon name="cilMagnifyingGlass"></svg>
+      </div>
       <table class="table table-bordered table-striped">
         <thead>
         <tr>
@@ -104,7 +108,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let persona of personas  | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
+        <tr *ngFor="let persona of filteredPersonas()  | paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
           <td>{{ persona.cedula }}</td>
           <td>{{persona.nombre}}</td>
           <td>{{ persona.apellido }}</td>
