--- a/src/app/views/mapas/ubicaciones/ubicaciones.component.scss
+++ b/src/app/views/mapas/ubicaciones/ubicaciones.component.scss
@@ -26,4 +26,12 @@ $primary-color: #007bff; // Color primario, puedes ajustarlo según tus preferen
   margin-top: 20px; // Margen superior
 }
 
+.boton-derecha {
+  float: right;
+  margin-left: 40%;
+}
 
+#contenedor-cabecera{
+  display: flex;
+  
+}
