--- a/src/app/views/mapas/zonas-seguras/zonas-seguras.component.html
+++ b/src/app/views/mapas/zonas-seguras/zonas-seguras.component.html
@@ -1,5 +1,6 @@
 <div class="search-container">
-    <input #autocomplete type="text" placeholder="Buscar dirección">
+  <input #autocomplete type="text" placeholder="Buscar...">
+  <svg class="search-icon" cIcon name="cilMagnifyingGlass"></svg>
 </div>
   <div>
     <div id="map-container">
