--- a/src/app/views/mapas/zonas-seguras/zonas-seguras.component.scss
+++ b/src/app/views/mapas/zonas-seguras/zonas-seguras.component.scss
@@ -15,10 +15,45 @@
     border-radius: 5px;
   }
   
-  .button-container {
-    margin-top: 10px;
-    button {
-      padding: 10px;
+  //CÓDIGO CSS PARA LOS CONTENEDORES DE LOS BOTONES
+
+  #final_mapa {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+  }
+
+  .lado_izquierdo {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .lado_derecho {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  .botones {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 10px; /* Espacio entre los botones */
+  }
+
+  .botones:hover {
+    background-color: #0056b3;
+  }
+
+  #guardar-punto-seguro{
+    padding: 10px;
       background-color: #4CAF50;
       color: white;
       border: none;
@@ -28,7 +63,6 @@
       &:hover {
         background-color: #45a049; // Cambio de color en hover
       }
-    }
   }
 
   .search-container {
@@ -49,4 +83,27 @@
     padding-left: 40px;
   }
   
+  .botones {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
   
+  .botones:hover {
+    background-color: #0056b3;
+  }
+
+  .botoneeliminar{
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 10px;
+  }
