--- a/src/app/views/mapas/ubicaciones/ubicaciones.component.html
+++ b/src/app/views/mapas/ubicaciones/ubicaciones.component.html
@@ -18,3 +18,15 @@
   >
   </google-map>
 </div>
+<div id="final_mapa">
+  <div class="lado_izquierdo">
+    
+  </div>
+    <!--BOTONES PARA ELIMINAR Y EDITAR-->
+    <div class="lado_derecho">
+      <div #btndelete_edit *ngIf="showOptions" [style.top.px]="clickPosition.y" [style.left.px]="clickPosition.x" class="context-menu">
+        <button class="botones" (click)="editPolygon()">Editar</button>
+        <button class="botones" (click)="deletePolygon()">Eliminar</button>
+      </div>
+    </div>
+</div>
