--- a/src/app/views/mapas/ubicaciones/ubicaciones.component.html
+++ b/src/app/views/mapas/ubicaciones/ubicaciones.component.html
@@ -1,7 +1,7 @@
 <div id="contenedor-cabecera">
   <label for="zona-segura-select">Seleccione una zona segura:</label>
   <select id="zona-segura-select" (change)="onZonaSeguraChange($event)">
-    <option *ngFor="let zonaSegura of zonasSeguras" [value]="zonaSegura.id_zona_segura">
+    <option *ngFor="let zonaSegura of zonasSeguras" [value]="zonaSegura.idZonaSegura">
       {{ zonaSegura.descripcion }}
     </option>
   </select>
