--- a/src/app/views/mapas/ubicaciones/ubicaciones.component.html
+++ b/src/app/views/mapas/ubicaciones/ubicaciones.component.html
@@ -1,13 +1,10 @@
 <div id="contenedor-cabecera">
-  <label for="zona-segura-select">Seleccione una zona segura:</label>
-  <select id="zona-segura-select" (change)="onZonaSeguraChange($event)">
+  <select class="form-control" (change)="onZonaSeguraChange($event)">
+    <option value="null" disabled selected>Seleccione una Zona Segura</option>
     <option *ngFor="let zonaSegura of zonasSeguras" [value]="zonaSegura.idZonaSegura">
       {{ zonaSegura.descripcion }}
     </option>
   </select>
-  <button class="boton-derecha" (click)="mostrarDispositivos()">
-    Mostrar Dispositivos
-  </button>
 </div>
 <div id="map-container">
   <google-map
