validacion en el eliminar

--- a/src/app/views/monitoreo/monitoreo.component.html
+++ b/src/app/views/monitoreo/monitoreo.component.html
@@ -66,9 +66,9 @@
           <h5 class="text-center">Detalles del Dispositivo Seleccionado</h5>
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-              <button class="nav-link" [class.active]="mostrarEstado" (click)="selectEstado(selectedEstado)">
+              <!--<button class="nav-link" [class.active]="mostrarEstado" (click)="selectedEstado(selectedEstado)">
                 {{ mostrarEstado ? 'Estado del Dispositivo' : 'Información del Dispositivo' }}
-              </button>
+              </button>-->
             </li>
           </ul>
           <div class="tab-content" id="myTabContent">
