--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -18,22 +18,22 @@
 <!--  <c-modal-footer>-->
 <!--    <button (click)="toggleLiveDemo()" cButton color="secondary">Cerrar</button>-->
 <!--  </c-modal-footer>-->
-  <div class="modal-dialog">
-    <div class="modal-content modal-md">
-      <div class="modal-header">
-        <h4 class="modal-title">Titulo</h4>
-        <button
-          #cerrarModal
-          id="cerrarModal"
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-        ></button>
-      </div>
-      <div class="modal-body">
-      </div>
-    </div>
-  </div>
+<!--  <div class="modal-dialog">-->
+<!--    <div class="modal-content modal-md">-->
+<!--      <div class="modal-header">-->
+<!--        <h4 class="modal-title">Titulo</h4>-->
+<!--        <button-->
+<!--          #cerrarModal-->
+<!--          id="cerrarModal"-->
+<!--          type="button"-->
+<!--          class="btn-close"-->
+<!--          data-bs-dismiss="modal"-->
+<!--        ></button>-->
+<!--      </div>-->
+<!--      <div class="modal-body">-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 </c-modal>
 
 
