--- a/src/app/views/pages/login/login.component.scss
+++ b/src/app/views/pages/login/login.component.scss
@@ -51,5 +51,8 @@
 .custom-progress-bar {
   background-color: #6a1b9a; /* Color de la barra de progreso morado oscuro */
 }
+.text-danger {
+  color: #e55353;
+}
 
 
