--- a/src/app/views/prestamo/prestamo.component.scss
+++ b/src/app/views/prestamo/prestamo.component.scss
@@ -142,3 +142,39 @@
 .search-input {
   padding-left: 40px;
 }
+.modal-custom {
+  z-index: 9050; /* Ensure modal is above other elements */
+  position: fixed; /* Ensure it stays in one place */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-header-custom {
+  display: flex;
+  align-items: center;
+  background-color: #f8f9fa;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.icon-secretary {
+  color: #6c757d;
+}
+
+.c-modal-body {
+  padding: 1.5rem;
+}
+
+img.rounded-circle {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.text-danger {
+  color: #e55353;
+}
